--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "materialize-css": "^1.0.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
